# sample_python_magicmock_usage

./: LICENSE  README.md  main.py  pyproject.toml
patch_mock_test/: modules.py
tests/: test_modules.py
